<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment"
    android:id="@+id/frameLayout2">

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/jost"
        android:text="@string/signup_text"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nomeEditText"
        android:layout_width="341dp"
        android:layout_height="41dp"
        android:layout_marginTop="208dp"
        android:background="@drawable/rounded_conner"
        android:fontFamily="@font/jost"
        android:hint="@string/nome_text"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="41dp"
        tools:layout_conversion_absoluteWidth="341dp" />

    <EditText
        android:id="@+id/cpfEditText"
        android:layout_width="341dp"
        android:layout_height="41dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/rounded_conner"
        android:fontFamily="@font/jost"
        android:hint="@string/cpf_text"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="41dp"
        tools:layout_conversion_absoluteWidth="341dp" />

    <EditText
        android:id="@+id/enderecoEditText"
        android:layout_width="341dp"
        android:layout_height="41dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/rounded_conner"
        android:fontFamily="@font/jost"
        android:hint="@string/endereco_text"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="41dp"
        tools:layout_conversion_absoluteWidth="341dp" />

    <EditText
        android:id="@+id/numeroEditText"
        android:layout_width="341dp"
        android:layout_height="41dp"
        android:layout_marginTop="412dp"
        android:background="@drawable/rounded_conner"
        android:fontFamily="@font/jost"
        android:hint="@string/numero_text"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="41dp"
        tools:layout_conversion_absoluteWidth="341dp" />

    <EditText
        android:id="@+id/funcaoEditText"
        android:layout_width="341dp"
        android:layout_height="41dp"
        android:layout_marginTop="344dp"
        android:background="@drawable/rounded_conner"
        android:fontFamily="@font/jost"
        android:hint="@string/funcao_text"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="41dp"
        tools:layout_conversion_absoluteWidth="341dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="341dp"
        android:layout_height="41dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/rounded_conner"
        android:fontFamily="@font/jost"
        android:hint="@string/email_button_text"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="41dp"
        tools:layout_conversion_absoluteWidth="341dp" />

    <EditText
        android:id="@+id/senhaEditText"
        android:layout_width="341dp"
        android:layout_height="41dp"
        android:layout_marginTop="548dp"
        android:background="@drawable/rounded_conner"
        android:fontFamily="@font/jost"
        android:hint="@string/senha_text"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="41dp"
        tools:layout_conversion_absoluteWidth="341dp" />

    <Button
        android:id="@+id/EntrarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp"
        android:text="@string/entrar_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>